2006-09-15  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services.pm: code improvements to the BSD, RCng and suse init
	types code.

2006-09-15  Carlos Garnacho  <carlosg@gnome.org>

	* SystemToolsBackends.pl.in, Utils/Monitor.pm: only initialize the
	file monitor if Sys::Gamin is found.

2006-09-08  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Parse.pm (get_from_ini)
	* Utils/Replace.pm (set_init) (remove_ini_section): escape properly
	the section name so it doesn't barf in regexps. Fixes GNOME bug
	#325495.

2006-09-08  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.5.1

2006-09-08  Carlos Garnacho  <carlosg@gnome.org>

	* system-tools-backends.conf.in: s/user/group/ in the @STB_GROUP@
	policy, you fool.

2006-09-08  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Platform.pm: cache the detected platform, it very likely won't
	vary ever for the same installation.

2006-09-06  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.5

2006-09-06  Carlos Garnacho  <carlosg@gnome.org>

	* system-tools-backends.conf.in: drop at_console, looks a bit scary
	wrt modifying system configuration, also uncomment group matching, 
	as latest DBus no longer crashes if the group doesn't exist.

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.4

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services.pm: do not provide services/runlevels roles. if 
	the users of s-t-b want this will need to have their own heuristic.
	* ServicesConfig.pm: do not export services/runlevels roles in the
	DBus struct.

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Services.pm (run_sysv_initd_script) (run_bsd_script)
	(run_gentoo_script) (run_rcng_script) (run_script): Added back.

	(set_sysv_service) (set_filerc_service) (set_bsd_services)
	(set_gentoo_service_status) (set_rcng_service_status)
	(set_archlinux_service_status) (set_suse_services): call the
	appropiate functions to start/stop a service.

2006-08-29  Carlos Garnacho  <carlosg@gnome.org>
